update for help

--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,9 @@
                     <div class="mdc-notched-outline__trailing"></div>
                 </div>
             </div>            
+            <a href="http://127.0.0.1:8080/" target="_blank"
             <button class="mdc-button mdc-button--raised" id="authButton">Authorize with Spotify</button>
+        </a>        
         </div>
     </div>
 
